--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.28.2",
-    "astro": "^4.15.3",
-    "sharp": "^0.32.5",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/starlight": "^0.28.3",
+    "astro": "^4.16.6",
+    "sharp": "^0.32.5",
+    "starlight-sidebar-topics": "^0.1.0",
     "typescript": "^5.6.2"
   }
 }
